# Fuente

./: .gitignore  .gitlab-ci.yml  CHANGELOG  Cargo.toml  DeployerDockerfile  PwaDockerfile  README.md  notes.txt  relays.txt  tailwind.config.cjs
.ansible/: hosts  invoicer-playbook.yml
.github/workflows/: main.yml
.gitlab-ci/: build-image.yml  build.yml  deploy_bin.yml  deploy_pwa.yml
admin/: Caddyfile  Cargo.toml  Trunk.toml  build.rs  deploy.sh  index.html  manifest.json  remote_deploy.sh  serviceWorker.js
admin/src/: admin.rs  config_context.rs  lib.rs  router.rs  stats_context.rs  whitelist.txt
admin/src/pages/: commerces.rs  couriers.rs  finance.rs  home.rs  mod.rs  settings.rs
business/: Caddyfile  Cargo.toml  Trunk.toml  build.rs  bun.lockb  deploy.sh  index.html  manifest.json  package.json  remote_deploy.sh  serviceWorker.js
business/src/: business.rs  router.rs
business/src/contexts/: commerce_data.rs  consumer_data.rs  mod.rs  order_data.rs
business/src/pages/: history.rs  home.rs  mod.rs  new_user.rs  products.rs  profile.rs  settings.rs
business/styles/: input.css
consumer/: Caddyfile  Cargo.toml  Trunk.toml  build.rs  deploy.sh  index.html  manifest.json  remote_deploy.sh  serviceWorker.js
consumer/src/: consumer.rs  router.rs
consumer/src/contexts/: auth.rs  cart.rs  commerce_data.rs  consumer_data.rs  favorites.rs  live_order.rs  mod.rs  ratings.rs
consumer/src/pages/: cart.rs  commerce.rs  favorites.rs  history.rs  home.rs  live_order.rs  mod.rs  new_user.rs  profile.rs  settings.rs  track_packages.rs
consumer/styles/: input.css
driver/: Cargo.toml  Trunk.toml  build.rs  deploy.sh  index.html  manifest.json  remote_deploy.sh
driver/src/: driver.rs  lib.rs  router.rs
driver/src/contexts/: commerce_data.rs  driver_data.rs  live_order.rs  mod.rs  order_data.rs
driver/src/pages/: driver_profile.rs  history.rs  home.rs  mod.rs  settings.rs
driver/styles/: input.css
fuente/: Cargo.toml  README.md
fuente/src/: lib.rs
fuente/src/browser/: crypto.rs  geolocation.rs  html.rs  indexed_db.rs  mod.rs  nominatim.rs
fuente/src/browser_api/: geolocation.rs  indexed_db.rs  mod.rs  service_worker.rs  web_utils.rs
fuente/src/contexts/: key_manager.rs  mod.rs  relay_pool.rs
fuente/src/contexts/admin_configs/: config_provider.rs  mod.rs
fuente/src/contexts/key_manager/: nostr_id.rs
fuente/src/contexts/language/: provider.rs
fuente/src/contexts/relay_pool/: nostr_relay.rs  relay_pool.rs
fuente/src/js/: bitcoin_qr.rs  common.rs  dflex-dnd.js  draggable.rs  leaflet.rs  mod.rs
fuente/src/mass/: mod.rs
fuente/src/mass/atoms/: forms.rs  layouts.rs  mod.rs  svgs.rs
fuente/src/mass/molecules/: address.rs  business.rs  consumers.rs  drivers.rs  login.rs  mod.rs  orders.rs  products.rs  ratings.rs  toast.rs
fuente/src/mass/molecules/orders/: cards.rs  checkout_responses.rs  history.rs  lists.rs  mod.rs  modals.rs  pickups.rs
fuente/src/mass/templates/: mod.rs
fuente/src/models/: address.rs  admin_configs.rs  commerce.rs  consumer_id.rs  consumer_profile.rs  driver.rs  favorites.rs  gps.rs  ln_address.rs  lnd.rs  mod.rs  nostr_kinds.rs  orders.rs  products.rs  relays.rs  sync.rs
fuente/src/models/orders/: db.rs  mod.rs  request.rs  state.rs  update.rs
fuente/src/models/ratings/: mod.rs  participant.rs  satisfaction.rs  trust.rs
fuente/src/widgets/: mod.rs
fuente/src/widgets/ag_grid/: component.rs  mod.rs
fuente/src/widgets/leaflet/: component.rs  leaflet.rs  mod.rs  nominatim.rs
fuente/src/widgets/toastify/: mod.rs  toastify.rs
invoicer/: .env.example  Cargo.toml  Dockerfile  deploy.sh  docker-compose.yml  remote_deploy.sh
invoicer/src/: invoicer.rs  ln_client.rs  lnd.rs  main.rs  relays.txt  state.rs  uploads.rs  whitelist.txt
invoicer/src/registries/: businesses.rs  couriers.rs  customers.rs  live_orders.rs  mod.rs
lightning/: Cargo.toml
lightning/src/: lib.rs  lightning_client.rs  ln_address.rs
lightning/src/lnd/: mod.rs  websocket.rs
lightning/src/lnd/models/: hodl_invoice.rs  invoice.rs  lnd_payment.rs
public/: index.html
public/language/: en.json  nl.json
public/styles/: input.css
ratings/: Cargo.toml  Dockerfile  docker-compose.yml  relays.txt
ratings/src/: bot.rs  main.rs  manager.rs
templates/components/: add-new-banner-modal.html  admin-dashboard-buttons.html  admin-dashboard-deal.html  admin-dashboard-details.html  admin-dashboard-revenue.html  admin-header.html  admin-nav-mobile.html  admin-profile-modal.html  admin-store-buttons.html  admin-store-tabs.html  all-categories.html  business-drivers-orders-menu.html  business-mobile-menu.html  business-nav-mobile.html  business-orders-menu.html  business-store-buttons.html  cart-details.html  categories-offers.html  checkout-products.html  driver-order-canceled-modal.html  driver-order-completed-modal.html  driver-order-details.html  driver-order-in-delivery-canceled-modal.html  driver-order-ready-to-delivery-modal.html  driver-orders.html  exchange-modal.html  favorites-product.html  footer.html  header.html  hot-categories-category.html  hot-categories-image.html  more-info.html  nav-mobile.html  navbar.html  pagination.html  product.html  profile-address.html  profile-information.html  profile.html  profiles-buttons.html  (+11 more)
templates/json/: texts.json
templates/views/app/: cart.html  categories-detail.html  categories.html  checkout.html  confirmation.html  detail-product.html  detail-store.html  error-screen.html  favorites-products.html  favorites-stores.html  home.html  orders-completed.html  orders-failed.html  orders.html  packages-completed.html  packages-delivery.html  packages-track.html  payment.html  profile-address.html  profile-personal.html  stores.html
templates/views/app/admin/: dashboard.html  exchange.html  profile.html  store-all-products.html  store-discontinued-products.html  store-new-product.html  store-new-products.html  store-products-on-sale.html  stores-pending.html
templates/views/app/business/: delivery-historic-canceled.html  driver-orders.html  (+25 more)
templates/views/auth/: login.html  register.html
