[workspace]
members = [ "business","consumer", "driver", "invoicer", "fuente", "admin", "ratings"]
resolver = "2"

[workspace.dependencies]
fuente = { path = "fuente" }
ratings = { path = "ratings" }

# ILLUMINODES stack
nostr-minions = "0.1.5"
bright-lightning = "0.1.4"
# bright-lightning = { path = "../bright-lightning" }
nostro2 = "0.2.2"
upload-things = "0.1.2"
#upload-things = { path = "../o2-thing/upload-things" }

anyhow = "1.0.94"
async-channel = "2.2.0"
chrono = "0.4.38"


gloo = "0.11.0"
js-sys = "0.3.70"

serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
wasm-bindgen-test = "0.3.42"
web-sys = { version = "0.3.70", features = ["HtmlInputElement", "HtmlFormElement", "SubtleCrypto", "CryptoKey", 
"Window", "Crypto", "AesKeyGenParams", "AesGcmParams", "IdbFactory", "IdbOpenDbOptions", "HtmlSelectElement", "Clipboard",
"IdbOpenDbRequest", "IdbTransaction", "IdbRequest", "IdbDatabase", "IdbObjectStore", "IdbRequestReadyState", "Navigator",
"HtmlAudioElement", "HtmlMediaElement", "Geolocation", "Response", "ReadableStream", "PositionOptions", "DomStringList",
"IdbTransactionMode", "IdbObjectStoreParameters", "Navigator", "ServiceWorkerContainer", "FetchEvent", "CustomEvent"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"

tokio = { version = "1.41.0", features = ["macros", "sync"] }


