[workspace]
members = [ "business","consumer", "driver", "invoicer", "fuente", "admin", "ratings"]
resolver = "2"

[workspace.dependencies]
fuente = { path = "fuente" }
ratings = { path = "ratings" }

# ILLUMINODES stack
nostr-minions = "0.1.9"
bright-lightning = "0.1.5"
nostro2 = "0.2.6"
upload-things = "0.1.2"

anyhow = "1.0.94"
async-channel = "2.2.0"
chrono = "0.4.38"

gloo = "0.11.0"
base64 = "0.21.7"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["HtmlInputElement", "HtmlFormElement", "SubtleCrypto", "CryptoKey", "MediaQueryList",
"Window", "Crypto", "AesKeyGenParams", "AesGcmParams", "IdbFactory", "IdbOpenDbOptions", "HtmlSelectElement", "Clipboard",
"IdbOpenDbRequest", "IdbTransaction", "IdbRequest", "IdbDatabase", "IdbObjectStore", "IdbRequestReadyState", "Navigator",
"HtmlAudioElement", "HtmlMediaElement", "Geolocation", "Response", "ReadableStream", "PositionOptions", "DomStringList",
"IdbTransactionMode", "IdbObjectStoreParameters", "Navigator", "ServiceWorkerContainer", "FetchEvent", "CustomEvent"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"

tokio = { version = "1.41.0", features = ["macros", "sync"] }


lucide-yew = "1.1.0"
