[package]
name = "business"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "business"
path = "src/business.rs"

[dependencies]
gloo.workspace = true
nostro2.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
fuente.workspace = true
wasm-bindgen.workspace = true
web-sys.workspace = true
yew.workspace = true
yew-router.workspace = true
nostr-minions.workspace = true
