[package]
name = "consumer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "consumer"
path = "src/consumer.rs"

[dependencies]
fuente.workspace = true
gloo.workspace = true
bright-lightning.workspace = true
nostr-minions.workspace = true
nostro2.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
wasm-bindgen.workspace = true
web-sys.workspace = true
yew.workspace = true
yew-router.workspace = true
upload-things.workspace = true
lucide-yew.workspace = true
wasm-bindgen-futures.workspace = true
