[package]
name = "driver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "driver"
path = "src/driver.rs"

[dependencies]
gloo.workspace = true
minions.workspace = true
nostro2.workspace = true
js-sys.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
fuente.workspace = true
wasm-bindgen.workspace = true
web-sys.workspace = true
yew.workspace = true
yew-router.workspace = true
