[package]
name = "driver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "driver"
path = "src/driver.rs"

[dependencies]
gloo.workspace = true
nostr-minions.workspace = true
nostro2.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
fuente.workspace = true
web-sys.workspace = true
yew.workspace = true
yew-router.workspace = true
lucide-yew.workspace = true
