[package]
name = "fuente"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-channel.workspace = true
base64.workspace = true
gloo.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
yew.workspace = true
yew-router.workspace = true

# WASM stuff
js-sys.workspace = true
serde-wasm-bindgen.workspace = true
wasm-bindgen.workspace = true 
wasm-bindgen-futures.workspace = true
web-sys.workspace = true

# Nostr stuff
sha2.workspace = true
nostro2.workspace = true
