[package]
name = "fuente"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-channel.workspace = true
gloo.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
yew.workspace = true
yew-router.workspace = true

# WASM stuff
js-sys.workspace = true
serde-wasm-bindgen.workspace = true
wasm-bindgen.workspace = true 
wasm-bindgen-futures.workspace = true
wasm-bindgen-test.workspace = true
web-sys.workspace = true

# Lightning stuff
base64.workspace = true
hex.workspace = true
lightning-invoice.workspace = true

# Nostr stuff
sha2.workspace = true
nostro2.workspace = true
