[package]
name = "fuente"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-channel.workspace = true
gloo.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
yew.workspace = true
yew-router.workspace = true
nostr-minions.workspace = true
upload-things.workspace = true

# WASM stuff
serde-wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
wasm-bindgen-test.workspace = true
web-sys.workspace = true

# Lightning stuff
bright-lightning.workspace = true

# Nostr stuff
nostro2.workspace = true
sha2 = "0.10.8"
lucide-yew.workspace = true
