[package]
name = "invoicer"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
fuente.workspace = true
async-channel.workspace = true
sha2.workspace = true
base64.workspace = true
nostro2.workspace = true

lightning.workspace = true

anyhow.workspace = true
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-test = "0.2.5"

httparse = "1.9.4"
futures-util = { version = "0.3.30", features = ["sink", "std"] }
native-tls = "0.2.12"
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
reqwest = { version = "0.12.7", features = ["json"] }
url = "2.5.2"

hex.workspace = true
secp256k1 = { version = "0.30.0", features = ["global-context"] }

