[package]
name = "invoicer"
version = "0.1.0"
edition = "2021"

[dependencies]

# Error handling
anyhow.workspace = true
# JSON 
serde.workspace = true
serde_json.workspace = true
fuente.workspace = true
# Nostr 
nostro2.workspace = true
# Lightning
bright-lightning.workspace = true

# Logging
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-test = "0.2.5"

# I/O
async-channel.workspace = true
futures-util = { version = "0.3.30", features = ["sink", "std"] }
tokio.workspace = true


# REST requests
reqwest = { version = "0.12.9", features = ["json"] }
httparse = "1.9.5"
url = "2.5.2"


