[package]
name = "ratings"
version = "0.1.0"
edition = "2021"

[dependencies]
# Error handling
anyhow.workspace = true
# JSON 
serde.workspace = true
serde_json.workspace = true
fuente.workspace = true
# Nostr 
nostro2.workspace = true

# Logging
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-test = "0.2.5"

# I/O
tokio = { version = "1.42.0", features = ["macros", "sync", "io-util", "rt-multi-thread"] }

